--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>379</width>
-    <height>378</height>
+    <height>433</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -15,14 +15,13 @@
   </property>
   <widget class="QWidget" name="centralWidget">
    <property name="styleSheet">
-    <string notr="true">
-</string>
+    <string notr="true"/>
    </property>
    <widget class="QLabel" name="result">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>10</y>
+      <y>60</y>
       <width>369</width>
       <height>60</height>
      </rect>
@@ -63,7 +62,7 @@ background-color: white;</string>
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>80</y>
+      <y>130</y>
       <width>63</width>
       <height>63</height>
      </rect>
@@ -103,7 +102,7 @@ QPushButton:pressed
     <property name="geometry">
      <rect>
       <x>87</x>
-      <y>80</y>
+      <y>130</y>
       <width>63</width>
       <height>63</height>
      </rect>
@@ -143,7 +142,7 @@ QPushButton:pressed
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>157</y>
+      <y>202</y>
       <width>63</width>
       <height>63</height>
      </rect>
@@ -183,7 +182,7 @@ QPushButton:pressed
     <property name="geometry">
      <rect>
       <x>87</x>
-      <y>157</y>
+      <y>202</y>
       <width>63</width>
       <height>63</height>
      </rect>
@@ -223,7 +222,7 @@ QPushButton:pressed
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>235</y>
+      <y>280</y>
       <width>63</width>
       <height>63</height>
      </rect>
@@ -263,7 +262,7 @@ QPushButton:pressed
     <property name="geometry">
      <rect>
       <x>87</x>
-      <y>235</y>
+      <y>280</y>
       <width>63</width>
       <height>63</height>
      </rect>
@@ -303,7 +302,7 @@ QPushButton:pressed
     <property name="geometry">
      <rect>
       <x>164</x>
-      <y>80</y>
+      <y>130</y>
       <width>63</width>
       <height>63</height>
      </rect>
@@ -343,7 +342,7 @@ QPushButton:pressed
     <property name="geometry">
      <rect>
       <x>164</x>
-      <y>157</y>
+      <y>202</y>
       <width>63</width>
       <height>63</height>
      </rect>
@@ -383,7 +382,7 @@ QPushButton:pressed
     <property name="geometry">
      <rect>
       <x>164</x>
-      <y>235</y>
+      <y>280</y>
       <width>63</width>
       <height>63</height>
      </rect>
@@ -423,7 +422,7 @@ QPushButton:pressed
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>303</y>
+      <y>348</y>
       <width>63</width>
       <height>61</height>
      </rect>
@@ -463,7 +462,7 @@ QPushButton:pressed
     <property name="geometry">
      <rect>
       <x>87</x>
-      <y>303</y>
+      <y>348</y>
       <width>63</width>
       <height>61</height>
      </rect>
@@ -503,7 +502,7 @@ QPushButton:pressed
     <property name="geometry">
      <rect>
       <x>164</x>
-      <y>303</y>
+      <y>348</y>
       <width>63</width>
       <height>61</height>
      </rect>
@@ -543,7 +542,7 @@ QPushButton:pressed
     <property name="geometry">
      <rect>
       <x>241</x>
-      <y>80</y>
+      <y>130</y>
       <width>71</width>
       <height>71</height>
      </rect>
@@ -582,7 +581,7 @@ QPushButton:pressed
     <property name="geometry">
      <rect>
       <x>318</x>
-      <y>80</y>
+      <y>130</y>
       <width>61</width>
       <height>63</height>
      </rect>
@@ -622,7 +621,7 @@ QPushButton:pressed
     <property name="geometry">
      <rect>
       <x>241</x>
-      <y>157</y>
+      <y>202</y>
       <width>63</width>
       <height>63</height>
      </rect>
@@ -662,7 +661,7 @@ QPushButton:pressed
     <property name="geometry">
      <rect>
       <x>318</x>
-      <y>157</y>
+      <y>202</y>
       <width>61</width>
       <height>63</height>
      </rect>
@@ -702,7 +701,7 @@ QPushButton:pressed
     <property name="geometry">
      <rect>
       <x>241</x>
-      <y>235</y>
+      <y>280</y>
       <width>63</width>
       <height>63</height>
      </rect>
@@ -742,7 +741,7 @@ QPushButton:pressed
     <property name="geometry">
      <rect>
       <x>318</x>
-      <y>235</y>
+      <y>280</y>
       <width>61</width>
       <height>63</height>
      </rect>
@@ -782,7 +781,7 @@ QPushButton:pressed
     <property name="geometry">
      <rect>
       <x>241</x>
-      <y>303</y>
+      <y>348</y>
       <width>137</width>
       <height>61</height>
      </rect>
@@ -816,6 +815,39 @@ QPushButton:pressed
     </property>
     <property name="text">
      <string>=</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="condition">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>20</y>
+      <width>369</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel
+{
+	qproperty-alignment: 'AlignCenter';
+	position: relative;
+	margin: 0px 10px 10px 0px;
+ 	float: left;
+
+	font-family: 'Pacifico', cursive;
+	font-size: 20px;
+	color: #FFF;
+	border-radius: 10px;
+	text-decoration: none;
+	background-color: #9933ff;
+	border-bottom: 5px solid #7300e6;
+	text-shadow: 0px -2px #7300e6;
+}
+
+background-color: white;</string>
+    </property>
+    <property name="text">
+     <string/>
     </property>
    </widget>
   </widget>
